<resources>
    <string name="app_name">DocFacile</string>
    <string name="search_doctor">Search for a doctor…</string>
    <string name="location">Location</string>
    <string name="seeall">See All</string>
    <string name="dentiste">Dentistry</string>
    <string name="allspc">All</string>
    <string name="cardiologue">Cardiology</string>
    <string name="pneumologie">Pulmonology</string>
    <string name="general">General</string>
    <string name="neurologie">Neurology</string>
    <string name="gastronomie">Gastronomy..</string>
    <string name="laboratory">Laboratory</string>
    <string name="vaccination">Vaccination</string>
    <string name="nearby">Nearby Medical Center</string>
    <string name="alldoc">All doctors</string>
    <string name="fnds">founds</string>
    <string name="dflt">Default</string>
    <string name="obra">Order By Rating</string>
    <string name="obre">Order By Reviews</string>
    <string name="obn">Order By Name</string>
    <string name="bookappointement">Book Appointement</string>
    <string name="selectdate">Select Date</string>
    <string name="selecthour">Select Hour</string>
    <string name="confirm">Confirm</string>
    <string name="congrats">Congratulations!</string>
    <string name="done">Done</string>
    <string name="mybookings">My Bookings</string>
    <string name="upcomings">upcoming</string>
    <string name="completed">completed</string>
    <string name="canceled">canceled</string>
    <string name="doctordetails">Doctor Details</string>
    <string name="patients">patients</string>
    <string name="exp">experience</string>
    <string name="rating">rating</string>
    <string name="reviews">reviews</string>
    <string name="abtme">About me</string>
    <string name="worktime">Working Time</string>
    <string name="codeverify">Code Verification</string>
    <string name="codeverifytext">Enter the code we just sent to your registered email address.</string>
    <string name="verify">Verify</string>
    <string name="favorits">Favorites</string>
    <string name="doctors">Doctors</string>
    <string name="Hospitals">Hospitals</string>
    <string name="fillinfos">Remplissez vos informations</string>
    <string name="lname">Last Name</string>
    <string name="fname">First Name</string>
    <string name="email">Email Adress</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="forgotpasswordtext">Enter your email, we will send you\na verification code</string>
    <string name="sendcode">Send Code</string>
    <string name="createnewpass">Create New Password</string>
    <string name="createnewpasstext">Your new password must be different from the previously used password</string>
    <string name="newpass">new password</string>
    <string name="confirmnewpass">confirm new password</string>
    <string name="changepass">Change password</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="helpandsupport">Help and Support</string>
    <string name="termsandconditions">Terms and Conditions</string>
    <string name="logout">Log out</string>
    <string name="surelogout">are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="ylogout">Yes, Logout</string>
    <string name="nicetoseeyou">Hello! Nice to see you again.</string>
    <string name="doingwell">I hope you are doing well.</string>
    <string name="password">password</string>
    <string name="signin">Sign in</string>
    <string name="or">or</string>
    <string name="connectgoogle">Continue with google</string>
    <string name="connectfacebook">Continue with facebook</string>
    <string name="noacc">Don\'t have an account yet?</string>
    <string name="createacc">Create an account</string>
    <string name="hereforhelp">We are here to help you!</string>
    <string name="name">name</string>
    <string name="haveacc">Do you have an account?</string>
    <string name="meetdoctors">Meet doctors</string>
    <string name="meetdoctorstext">Connect with Specialized Doctors Online for\nConvenient and Comprehensive Medical\nConsultations</string>
    <string name="meetdoctorstext2">Explore a Vast Array of Online Medical\nSpecialists, Offering an Extensive Range of\nExpertise Tailored to Your Healthcare Needs.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="addrev">Add Review</string>
    <string name="rebook">Re-book</string>
    <string name="notavailable">We\'re sorry, but this app is not yet available in your country.</string>
    <string name="openinmaps">Open in maps</string>
    <string name="noreview">No reviews</string>
    <string name="accready">Your account is ready to use. You will be redirected to the homepage in a few seconds.</string>
    <string name="nobookingup">No booking upcoming yet</string>
    <string name="nobookingcom">No booking completed yet</string>
    <string name="nobookingcan">No booking canceled yet</string>
    <string name="nobookingfound">No bookings found</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="time_less_than_minute">less than a minute ago</string>
    <string name="time_one_minute">1 minute ago</string>
    <string name="time_minutes">%1$d minutes ago</string>
    <string name="time_one_hour">1 hour ago</string>
    <string name="time_hours">%1$d hours ago</string>
    <string name="time_yesterday">yesterday</string>
    <string name="time_days">%1$d days ago</string>
    <string name="reschedule">Reschedule</string>
    <string name="review">Review</string>
    <string name="rebook1">Re-book</string>
    <string name="appointment_success">Your appointment with Dr. %1$s is confirmed for %2$s.</string>
    <string name="appointment_changed">Your appointment has been rescheduled to %2$s with Dr. %1$s.</string>
    <string name="appointment_canceled">Your appointment with Dr. %1$s has been canceled.</string>
    <string name="appointment_updated">Appointment update.</string>
    <string name="default_doctor_name">your doctor</string>
    <string name="appointment_tomorrow_fr">You have an appointment tomorrow at %1$s with %2$s.</string>
    <string name="appointment_title">DocFacile Appointment</string>
    <string name="ctgs">Categories</string>
    <string name="nearbymedicalcenter">Nearby medical center</string>
    <string name="loc">Location...</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="introduction">Introduction</string>
    <string name="subintroduction">Welcome to DocFacile. These Terms and Conditions govern your use of the DocFacile mobile app, provided by us. By using our App, you agree to be legally bound by these Terms. If you do not agree, please do not use the App.</string>
    <string name="purp">Purpose of the App</string>
    <string name="subpurp">DocFacile is designed to help users in Algiers find, book, and manage appointments with medical professionals. The App is currently in beta testing, which means features are being improved and may change at any time.</string>
    <string name="eligibility">Eligibility</string>
    <string name="subeligibility">By using DocFacile, you confirm that:\nYou are at least 16 years old, or have parental permission to use the App.</string>
    <string name="userresponsabilities">User Responsibilities</string>
    <string name="subuserresponsabilities">When using DocFacile, you agree to:\n- Provide accurate, complete, and up-to-date personal information.\nNot use the app for fraudulent or illegal activities</string>
    <string name="contact">Contact</string>
    <string name="subcontact">If you have questions about these Terms, contact us:\nEmail: yanishales19@gmail.com</string>
</resources>