<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AllDoctorsActivity">
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/arrow_left"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:id="@+id/returnarr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/returnarr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/alldoc"
        android:layout_marginTop="24dp"
        android:id="@+id/titlee"
        android:textStyle="bold"
        android:textSize="22sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/titlee"
        android:id="@+id/searchinput1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/search_doctor"
        android:padding="10dp"
        android:drawableStart="@drawable/search_normal"
        android:drawablePadding="10dp"
        android:background="@drawable/style_input_search"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/searchinput1"
            android:layout_marginTop="24dp"
            android:id="@+id/scroll"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/allspc"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_general"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/general"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_cardiologist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/cardiologue"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_dentist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/dentiste"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_pulmonologist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/pneumologie"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_neurologist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/neurologie"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_gastrology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/gastronomie"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_laboratory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/laboratory"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_vaccination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttons_bg_selector"
                    android:padding="5dp"
                    android:text="@string/vaccination"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp" />
            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/tresult"
            android:textColor="#1F2A37"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="532 founds"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#6B7280"
        app:layout_constraintTop_toTopOf="@id/tresult"
        app:layout_constraintBottom_toBottomOf="@id/tresult"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="40dp"
        android:id="@+id/sort"
        android:text="@string/dflt"/>
    <ImageView
        android:layout_width="14dp"
        android:layout_height="14dp"
        app:layout_constraintTop_toTopOf="@id/sort"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@id/sort"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/arrow_bidirectional"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tresult"
        android:layout_marginEnd="24dp"
        android:overScrollMode="never"
        android:layout_marginTop="24dp"
        android:id="@+id/recy"
        android:layout_marginStart="24dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        android:id="@+id/msg"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/vvv"
        app:layout_constraintTop_toBottomOf="@id/tresult"/>
    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:id="@+id/vvv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>