<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewPasswordActivity">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:id="@+id/back"
        android:src="@drawable/arrow_left"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:layout_marginTop="15dp"
        android:id="@+id/logo"
        android:src="@drawable/vector"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:id="@+id/head"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Doc"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#aaa"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Facile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head"
        android:layout_marginTop="30dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:id="@+id/head1"
        android:textSize="22sp"
        android:text="@string/createnewpass"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head1"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="24dp"
        android:id="@+id/head2"
        android:text="@string/createnewpasstext"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head2"
        android:layout_marginHorizontal="24dp"
        android:padding="3dp"
        android:id="@+id/signupform"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:padding="14dp"
            android:id="@+id/pass"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="5dp"
            android:background="@drawable/style_inputs"
            android:hint="@string/newpass"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="12dp"
            android:textColor="#000"
            android:padding="14dp"
            android:id="@+id/passsignin"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="5dp"
            android:background="@drawable/style_inputs"
            android:hint="@string/confirmnewpass"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_marginTop="3dp"
            android:layout_height="wrap_content"
            android:text="Changer le mot de pass"
            android:textAllCaps="false"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:id="@+id/chng"
            android:textColor="#fff"
            android:background="@drawable/bg_button_next"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>